--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user,scalable=no">
     <title>Hoja de Vida Digital</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <header>
@@ -11,7 +12,7 @@
       <center><h1>Curriculum Vitae</h1></center>
         <center><h2>Nicolas Mauricio Caicedo Cambindo</h2></center>
           <center><h3>22 de septiembre de 1987, Cali (Valle del Cauca)</h3></center>
-            <center><img src="images/Foto_info_person.jpg" alt="Foto Perfil" title="Foto Perfil" width="15%"></center>
+            <center><img border="2" src="images/Foto_info_person.jpg" alt="Foto Perfil" title="Foto Perfil" width="15%"></center>
     </header>
     <section>
         <center><h2>Perfil Profesional</h2></center>
