--- a/html/Educacion.html
+++ b/html/Educacion.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user,scalable=no">
     <title>Hoja de Vida Digital - Educacion</title>
+    <link rel="stylesheet" href="../css/estilos.css">
   </head>
   <body>
     <header>
@@ -11,7 +12,7 @@
       <center><h1>Curriculum Vitae</h1></center>
         <center><h2>Nicolas Mauricio Caicedo Cambindo</h2></center>
           <center><h3>22 de septiembre de 1987, Cali (Valle del Cauca)</h3></center>
-            <center><img src="../images/Foto_info_person.jpg" alt="Foto Perfil" title="Foto Perfil" width="15%"></center>
+            <center><img border="2" src="../images/Foto_info_person.jpg" alt="Foto Perfil" title="Foto Perfil" width="15%"></center>
     </header>
     <section>
       <center><h2>Educacion</h2></center>
@@ -28,25 +29,25 @@
         </thead>
         <tbody>
         <tr>
-          <td>Diplomado</td>
-          <td>Tutoría Virtual</td>
-          <td>Universidad Nacional Abierta y a Distancia</td>
-          <td>Mayo de 2014</td>
-          <td>Si</td>
+          <td><center>Diplomado</center></td>
+          <td><center>Tutoría Virtual</center></td>
+          <td><center>Universidad Nacional Abierta y a Distancia</center></td>
+          <td><center>Mayo de 2014</center></td>
+          <td><center>Si</center></td>
         </tr>
         <tr>
-          <td>Posgrado</td>
-          <td>Especialización en Finanzas</td>
-          <td>Universidad EAFIT</td>
-          <td>Junio de 2017</td>
-          <td>Si</td>
+          <td><center>Posgrado</center></td>
+          <td><center>Especialización en Finanzas</center></td>
+          <td><center>Universidad EAFIT</center></td>
+          <td><center>Junio de 2017</center></td>
+          <td><center>Si</center></td>
         </tr>
         <tr>
-          <td>Posgrado</td>
-          <td>Maestría en Administración Financiera</td>
-          <td>Universidad EAFIT</td>
-          <td>Noviembre de 2018</td>
-          <td>Si</td>
+          <td><center>Posgrado</center></td>
+          <td><center>Maestría en Administración Financiera</center></td>
+          <td><center>Universidad EAFIT</center></td>
+          <td><center>Noviembre de 2018</center></td>
+          <td><center>Si</center></td>
         </tr>
         </tbody>
       </table>
